--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -11,13 +12,17 @@
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.16",
     "bootstrap": "^4.6.1",
+    "feather-icons-react": "^0.5.0",
     "framer-motion": "^6.3.3",
     "node-sass": "^4.14.1",
-    "react": "^18.1.0",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.6.4",
-    "react-dom": "^18.1.0",
+    "react-dom": "^17.0.1",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
     "react-uuid": "^1.0.2",
+    "redux": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -50,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@redux-devtools/core": "^3.12.0",
     "eslint": "^8.15.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-testing-library": "^5.4.0",
