--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.6.1",
     "feather-icons-react": "^0.5.0",
     "framer-motion": "^6.3.3",
+    "lodash.shuffle": "^4.2.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.4",
