--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
@@ -12,6 +13,7 @@
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.16",
     "bootstrap": "^4.6.1",
+    "eslint-plugin-import": "^2.26.0",
     "feather-icons-react": "^0.5.0",
     "framer-motion": "^6.3.3",
     "lodash.shuffle": "^4.2.0",
