--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://andre-rd-rodrigues.github.io/portfolio"
   },
   "private": false,
-  "homepage": "http://andre-rd-rodrigues.github.io/memory-game/",
+  "homepage": "http://andre-rd-rodrigues.github.io/memory-game",
   "dependencies": {
     "@babel/eslint-parser": "^7.17.0",
     "@reduxjs/toolkit": "^1.8.1",
