--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.12.0",
+    "react-toastify": "^9.0.3",
     "react-uuid": "^1.0.2",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
